Initial styles and formatting

--- a/web/src/styles/global.styl
+++ b/web/src/styles/global.styl
@@ -1,1 +1,15 @@
 @import "~reset.css/reset.css"
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700")
+
+*
+  outline: 0
+  box-sizing: border-box
+  -webkit-font-smoothing: antialiased
+
+html body
+  color: $fg
+  background: $bg
+  font-family: $font
+  font-size: 14px
+  overflow: hidden
+
