--- a/web/src/styles/components/App.styl
+++ b/web/src/styles/components/App.styl
@@ -1,14 +1,23 @@
 .App
-  background: #EEE
-  padding: 10px
-  &:empty
-    &::before
-      content: "Click to load processes"
-      display: block
-      text-align: center
-      cursor: pointer
+  width: 100vw
+  height: 100vh
 
-  pre
-    margin: 15px 0
-    border: 1px solid #CCC
-    background: #FAFAFA
+  &__start
+    width: 100%
+    height: 50px
+    background: $fg
+    color: $bg
+    font-size: 16px
+    border: 0
+    cursor: pointer
+    transition: background-color 0.2s ease-in-out
+    text-transform: uppercase
+    font-family: $font
+    &:hover
+      background: $fg-hover
+
+    &.is-running
+      background: $active
+      &:hover
+        background: $active-hover
+
