--- a/web/src/styles/components/App.styl
+++ b/web/src/styles/components/App.styl
@@ -25,3 +25,27 @@
   &__actions
     height: 30px
     background: $fg
+    display: flex
+    align-items: center
+    padding: 0 5px
+
+    &__button
+      border: 0
+      background: #FFF
+      -webkit-mask: no-repeat center / contain
+      width: 22px
+      height: 22px
+      margin-right: 10px
+      overflow: hidden
+      text-indent: -9990px
+      cursor: pointer
+      transition: background-color 0.3s ease-in-out
+      &:hover
+        background-color: #CCC
+
+      &:last-child
+        margin-right: 0
+
+      &--config
+        -webkit-mask-image: url("../../icons/cog.svg")
+        margin-left: auto
