--- a/web/src/styles/components/ControlBar.styl
+++ b/web/src/styles/components/ControlBar.styl
@@ -7,6 +7,10 @@
   align-items: center
   justify-content: flex-end
   cursor: -webkit-grab
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
 
   &:active
     cursor: -webkit-grabbing
