Fixes for builds

--- a/web/src/styles/components/ConfigApp.styl
+++ b/web/src/styles/components/ConfigApp.styl
@@ -1,7 +1,9 @@
 .ConfigApp
   height: 100vh
   overflow-y: scroll
+  overflow-x: hidden
   padding-top: 26px
+  padding-right: 30px
 
   &__field
     padding: 10px
