Playlist editor window setup

--- a/web/src/styles/components/App.styl
+++ b/web/src/styles/components/App.styl
@@ -50,3 +50,6 @@
       &--config
         -webkit-mask-image: url("../../icons/cog.svg")
         margin-left: auto
+
+      &--editor
+        -webkit-mask-image: url("../../icons/pencil.svg")
