initial editor layout

--- a/web/src/styles/components/ControlBar.styl
+++ b/web/src/styles/components/ControlBar.styl
@@ -11,9 +11,18 @@
   top: 0
   left: 0
   right: 0
+  z-index: 1000
 
   &:active
     cursor: -webkit-grabbing
+
+  &__title
+    margin-right: auto
+    color: $bg
+    font-size: 12px
+    font-weight: bold
+    margin-left: 5px
+    text-transform: uppercase
 
   &__action
     -webkit-mask: no-repeat center / contain
