Add item functionality

--- a/web/src/styles/components/EditorApp.styl
+++ b/web/src/styles/components/EditorApp.styl
@@ -14,3 +14,11 @@
     font-family: $font
     &:hover
       background: $active-hover
+
+  &__file
+    visibility: hidden
+    position: absolute
+    width: 0
+    height: 0
+    top: -1000px
+    left: -1000px
