Process spawn code

--- a/web/src/styles/components/PlaylistEditor.styl
+++ b/web/src/styles/components/PlaylistEditor.styl
@@ -43,7 +43,12 @@
         border: 0
         background-color: none
         -webkit-mask: no-repeat center / cover
+        cursor: pointer
+
 
         &--remove
           background-color: #FA303B
           -webkit-mask-image: url("../../icons/circle-cross.svg")
+
+          &:hover
+            background-color: #D12B35
