--- a/web/src/styles/components/OculusLibrary.styl
+++ b/web/src/styles/components/OculusLibrary.styl
@@ -10,16 +10,34 @@
   width: 100%
   height: calc(100vh - 26px)
 
+
   &__app
-    height: auto
-    border-bottom: 1px solid $border
-    padding: 10px
+    padding: 5px
+    float: left
     cursor: pointer
     text-align: center
     font-weight: bold
+    width: calc(100% / 4)
+    height: 120px
+    display: flex
+    align-items: center
+    justify-content: center
+    overflow: hidden
+    flex-direction: column
 
     img
       display: block
       margin: 0 auto
-      width: 180px
-      height: 51px
+      width: 90px
+      height: 90px
+
+
+    &__title
+      font-size: 12px
+      font-weight: 400
+      white-space: nowrap
+      margin-top: 5px
+      text-overflow: ellipsis
+      overflow: hidden
+      width: 100%
+      height: 15px
