--- a/web/src/styles/components/OculusLibrary.styl
+++ b/web/src/styles/components/OculusLibrary.styl
@@ -24,8 +24,10 @@
     justify-content: center
     overflow: hidden
     flex-direction: column
+    transition: opacity 0.2s ease
+    will-change: opacity
 
-    img
+    img, .Thumbnail
       display: block
       margin: 0 auto
       width: 90px
@@ -41,3 +43,28 @@
       overflow: hidden
       width: 100%
       height: 15px
+
+  &.is-loading
+    .OculusLibrary__app
+      opacity: 0.4
+      pointer-events: none
+      &:first-child
+        pointer-events: auto
+    &::after
+      content: ""
+      position: fixed
+      top: 50%
+      left: 50%
+      margin-top: -20px
+      margin-left: -20px
+      background: url("../../icons/loading.svg") no-repeat center / 40px
+      animation: spinner 1s linear infinite
+      width: 40px
+      height: 40px
+
+
+@keyframes spinner
+  0%
+    transform: rotate(0deg)
+  100%
+    transform: rotate(360deg)
