--- a/web/src/styles/components/OculusLibrary.styl
+++ b/web/src/styles/components/OculusLibrary.styl
@@ -10,6 +10,18 @@
   width: 100%
   height: calc(100vh - 26px)
 
+  &__filter
+    height: 30px
+    width: 100%
+    display: block
+    border: 0
+    border-bottom: 1px solid #CCC
+    margin-bottom: 20px
+    font-size: 14px
+    padding: 0 15px
+
+  &__list
+    overflow: hidden
 
   &__app
     padding: 5px
@@ -26,6 +38,9 @@
     flex-direction: column
     transition: opacity 0.2s ease
     will-change: opacity
+
+    &:first-child
+      padding-bottom: 15px
 
     img, .Thumbnail
       display: block
@@ -44,23 +59,23 @@
       width: 100%
       height: 15px
 
-  &.is-loading
-    .OculusLibrary__app
-      opacity: 0.4
-      pointer-events: none
-      &:first-child
-        pointer-events: auto
-    &::after
-      content: ""
-      position: fixed
-      top: 50%
-      left: 50%
-      margin-top: -20px
-      margin-left: -20px
-      background: url("../../icons/loading.svg") no-repeat center / 40px
-      animation: spinner 1s linear infinite
-      width: 40px
-      height: 40px
+    &.is-loading
+      .OculusLibrary__app
+        opacity: 0.4
+        pointer-events: none
+        &:first-child
+          pointer-events: auto
+      &::after
+        content: ""
+        position: fixed
+        top: 50%
+        left: 50%
+        margin-top: -20px
+        margin-left: -20px
+        background: url("../../icons/loading.svg") no-repeat center / 40px
+        animation: spinner 1s linear infinite
+        width: 40px
+        height: 40px
 
 
 @keyframes spinner
