--- a/web/src/styles/components/Playlist.styl
+++ b/web/src/styles/components/Playlist.styl
@@ -15,6 +15,10 @@
 
     &.is-active
       background-color: $highlight
+      &:hover
+        .Playlist__item__restart
+          opacity: 1
+          pointer-events: auto
 
     &__duration
       position: absolute
@@ -27,3 +31,23 @@
       width: 100px
       text-align: right
       padding-right: 10px
+
+
+    &__restart
+      position: absolute
+      left: 50%
+      top: 50%
+      transform: translate(-50%, -50%)
+      opacity: 0
+      pointer-events: none
+      height: 30px
+      background: #222
+      color: #FFF
+      font-family: $font
+      font-size: 14px
+      border: 0
+      width: 80%
+      border-radius: 3px
+      transition: opacity 0.3s ease
+      will-change: transition
+      cursor: pointer
